syntax = "proto3";

package demo.coinz;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "demo/coinz/params.proto";

option go_package = "github.com/jtieri/demo/x/coinz/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/jtieri/demo/coinz/params";
  
  }
  
  // Queries a list of AdminAddress items.
  rpc AdminAddress (QueryAdminAddressRequest) returns (QueryAdminAddressResponse) {
    option (google.api.http).get = "/jtieri/demo/coinz/admin_address";
  
  }
  
  // Queries a PauseState by index.
  rpc PauseState (QueryGetPauseStateRequest) returns (QueryGetPauseStateResponse) {
    option (google.api.http).get = "/jtieri/demo/coinz/pause_state";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// QueryAdminAddressRequest is used to query the Admin address from state.
message QueryAdminAddressRequest {}

// QueryAdminAddressResponse is sent as a response to QueryAdminAddressRequest with the Admins address.
message QueryAdminAddressResponse {
  string address = 1;
}

// QueryGetPauseStateRequest is used to query the PauseState from state.
message QueryGetPauseStateRequest {}

// QueryGetPauseStateResponse is sent as a response to QueryGetPauseStateRequest with the PauseState value.
message QueryGetPauseStateResponse {
  bool paused = 1 [(gogoproto.jsontag) = "paused"];
}

